--- a/_config.yml
+++ b/_config.yml
@@ -7,18 +7,16 @@
 
 # Site settings
 title: blog
-email: tigefa@gmail.com
+email: me@dimi.io
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Dimitri Walters's blog
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://dimitriwalters.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: dimitriwalters
+github_username:  dimitriwalters
 
 # Google cse -> read the README.md for learn more.
-gcse: 006270711061491111331:vsivtajjjh0
+gcse: 015239266043573038855:iqblmapzhiu
 
 # Conversion
 markdown:    kramdown
